# UniProject

./: .gitignore  CMakeLists.txt
cmake_modules/: FindSDL2.cmake
res/shaders/: ScreenSpace.fs  ScreenSpace.vs  portal.fs  portal.vs  post.fs  reasonable.fs  reasonable.vs  reasonablePortal.vs  shadowmap.vs
src/: main.cpp
src/engine/: BodyObj.cpp  BodyObj.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Obj.cpp  Obj.h  PortalObj.cpp  PortalObj.h  Scene.h  picopng.h
src/graphics/: Camera.cpp  Camera.h  FBO.cpp  FBO.h  Mesh.cpp  Mesh.h  RenderPipeline.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  Texture.h
src/graphics/lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h
src/graphics/renderstage/: PostStage.cpp  PostStage.h  RenderPipeline.h  RenderStage.h  SceneStage.cpp  SceneStage.h  ShadowStage.cpp  ShadowStage.h  SimpleRenderPipeline.cpp  SimpleRenderPipeline.h
src/maths/: MyMath.h  Transform.cpp  Transform.h  mat3.cpp  mat3.h  mat4.cpp  mat4.h  quat.cpp  quat.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/physics/: Body.cpp  Body.h  Element.cpp  Element.h  ElementListener.cpp  ElementListener.h  PhysicsWorld.cpp  PhysicsWorld.h  Shape.h
src/physics/constraints/: BinaryConstraint.h  Constraint.h  ConstraintSolver.h  IterativeSolver.cpp  IterativeSolver.h
src/physics/constraints/manifold/: Collision.cpp  (+6 more)
src/physics/shapes/: AABB.cpp  AABB.h  Boundless.cpp  Boundless.h  Shape.cpp  Shape.h
src/scenes/: Environment.cpp  Environment.h  PortalCollisionListener.cpp  PortalCollisionListener.h  SimpleScene.cpp  SimpleScene.h
